Fix ShapeResult::OffsetForPosition edge behavior

This patch fixes ShapeResult::OffsetForPosition, when the position is at
exact character boundaries and include_partial_glyphs is false, to
return the next character.

Before this change, boundaries were part of previous characters. This
function is used to identify how many characters can fit in a space,
such as ShapingLineBreaker, ellipsis, and break-all, and thus the old
behavior failed to fit a character exactly equal to the available space.
Existing tests were rebaselined for such cases to be better.

This fix also make OffsetForPosition matches to PositionForOffset.

BUG=729318

Review-Url: https://codereview.chromium.org/2924463002
Cr-Commit-Position: refs/heads/master@{#477263}

Former-commit-id: 1fb6007f25ce38b50bd6700f292e65ca8e501e7b